--- a/scripts.yaml
+++ b/scripts.yaml
@@ -29,7 +29,7 @@ tv_hdmi_1:
       - service: input_select.select_option
         data:
           entity_id: input_select.tv_source_dropdown
-          option: hdmi 1
+          option: Chromecast
 
 tv_hdmi_2:
     sequence:
@@ -41,7 +41,7 @@ tv_hdmi_2:
       - service: input_select.select_option
         data:
           entity_id: input_select.tv_source_dropdown
-          option: hdmi 2
+          option: TV
 
 tv_hdmi_3:
     sequence:
@@ -53,7 +53,7 @@ tv_hdmi_3:
       - service: input_select.select_option
         data:
           entity_id: input_select.tv_source_dropdown
-          option: hdmi 3
+          option: Blueray
 
 soundbar_on:
     sequence:
@@ -62,6 +62,7 @@ soundbar_on:
         data:
           command:
             - 'soundbar_on_off'    
+
 soundbar_off:
     sequence:
       - service: remote.send_command
@@ -69,6 +70,7 @@ soundbar_off:
         data:
           command:
             - 'soundbar_on_off'
+
 soundbar_mute:
     sequence:
       - service: remote.send_command
@@ -76,6 +78,10 @@ soundbar_mute:
         data:
           command:
             - 'soundbar_mute'
+      - service: input_boolean.toggle
+        data:
+          entity_id: input_boolean.soundbar_mute
+
 soundbar_volume_down:
     sequence:
       - service: remote.send_command
@@ -138,13 +144,28 @@ soundbar_hdmi:
           entity_id: input_select.soundbar_source_dropdown
           option: hdmi
         
-blueray_on_off:
+blueray_on:
     sequence:
       - service: remote.send_command
         entity_id: 'remote.xiaomi_miio_192_168_0_7'
         data:
           command:
             - 'blueray_on_off'           
+      - service: input_boolean.turn_on
+        data:
+          entity_id: input_boolean.blueray
+
+blueray_off:
+    sequence:
+      - service: remote.send_command
+        entity_id: 'remote.xiaomi_miio_192_168_0_7'
+        data:
+          command:
+            - 'blueray_on_off'           
+      - service: input_boolean.turn_off
+        data:
+          entity_id: input_boolean.blueray
+
 blueray_play:
     sequence:
       - service: remote.send_command
